src/objects/Revenue_Splits_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Automation_Start_Date__c</fullName>
        <label>Automation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Failure_Warning_Message__c</fullName>
        <label>Failure Warning Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unsupported_Action_Warning_Message__c</fullName>
        <label>Unsupported Action Warning Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Warning_Emails_c__c</fullName>
        <description>Comma-separated list of email addresses to warn in case of failure or unsupported action</description>
        <label>Warning_Emails__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Revenue Splits Settings</label>
</CustomObject>